<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <TextView
        android:id="@+id/tvUsernameLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/usernameLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/tvUsernameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvUsernameLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvUsernameLabel"/>

    <TextView
        android:id="@+id/tvRealNameLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/realNameLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUsernameLabel" />
    <TextView
        android:id="@+id/tvRealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/tvRealNameLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvRealNameLabel"
        app:layout_constraintStart_toEndOf="@id/tvRealNameLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvAgeLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ageLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRealNameLabel" />
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/tvAgeLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvAgeLabel"
        app:layout_constraintStart_toEndOf="@id/tvAgeLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvBreedLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/breedLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAgeLabel" />
    <TextView
        android:id="@+id/tvBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/tvBreedLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvBreedLabel"
        app:layout_constraintStart_toEndOf="@id/tvBreedLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvWeightLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weightLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBreedLabel" />
    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/tvWeightLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvWeightLabel"
        app:layout_constraintStart_toEndOf="@id/tvWeightLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvActivityLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activityLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWeightLabel" />
    <TextView
        android:id="@+id/tvActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/tvActivityLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvActivityLabel"
        app:layout_constraintStart_toEndOf="@id/tvActivityLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvBioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bioLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvActivityLabel" />
    <TextView
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBioLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>